@@ -7,6 +7,11 @@ DocKnot 3.05 (unreleased)
     two, ignore the indentation, and increase the threshold for a short
     line to 45 characters from 40.
 
+    Update to rra-c-util 8.3:
+
+    * Fix style issues caught by Perl::Critic::Freenode.
+    * Ignore debian/changelog when checking for obsolete strings.
+
 DocKnot 3.04 (2020-05-16)
 
     Change the vcs.travis metadata key to vcs.status.travis.  This will
